# Brain-Games

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/scripts/: brain_games.py
brain_games_package/: cli.py  games_logic.py
brain_games_package/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games_package/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
