[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ruslan Zinnatov <rh26157@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games_package"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games_package.scripts.brain_games:main"
brain-even = "brain_games_package.scripts.brain_even:main"
brain-calc = "brain_games_package.scripts.brain_calc:main"
brain-gcd = "brain_games_package.scripts.brain_gcd:main"
brain-progression = "brain_games_package.scripts.brain_progression:main"
brain-prime = "brain_games_package.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
